# Constrained_DA

./: .gitignore  README.md  algorithm.py  algorithm_2.py  algorithm_archive.py  algorithm_archive_2.py  algorithm_modified.py  chinese_mechanism.py  compose.yml  data_analysis.py  experiment_results.csv  experiment_results_grouped.csv  main_1.py  main_2.py  main_3.py  nash_equilibrium_searcher.py  plots_and_tables.py  pyproject.toml  requirements.txt  run_experiment.py  some_res  test_ideas.py  test_system.py  test_system_2.py  test_system_3.py  utils.py
algorithm/: __init__.py  chinese_parallel.py  manipulation.py  sampler.py
algorithms/: boston.py  gale_shapley.py  probs_estimator.py
analysis/: __init__.py  all_preferences_test_system.py  data_analysis.py  nash_equilibrium_searcher.py  plots_and_tables.py  tables_generator.py
archive/: algorithm_all.py  utils_all.py
data_out/: data_out_100_1.csv  data_out_100_filtered.csv  data_out_mod_test.csv  data_out_new.csv  data_out_new_2.csv  data_out_server.csv  data_out_server_2.csv  data_out_server_2_filtered.csv  data_out_server_3.csv  data_out_server_3_filtered.csv  data_out_server_3_filtered_100.csv  experiment_results_ex.csv  experiment_results_final_test_300.csv  experiment_results_grouped.csv  experiment_results_grouped_ex.csv  new_experiment_results_grouped_ex.csv  new_experiment_results_grouped_ex_1.csv  new_experiment_results_grouped_ex_k.csv  new_experiment_results_grouped_ex_k_1.csv  new_experiment_results_grouped_ex_k_2.csv  new_experiment_results_grouped_ex_k_3.csv
data_out_server/: test_results_0.csv  (+390 more)
(+66 files in other folders)
