[tool.poetry]
name = "constrained_da"
version = "0.1.0"
description = ""
authors = ["Dpbt <denisderkach2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.2"
pandas = "^2.2.3"
joblib = "^1.4.2"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
